# PicCompareTool

./: CMakeLists.txt  README.md
src/: configmanager.cpp  configmanager.h  iconmanager.cpp  iconmanager.h  imageloader.cpp  imageloader.h  imageviewer.cpp  imageviewer.h  languagemanager.cpp  languagemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  thememanager.cpp  thememanager.h  titlebar.cpp  titlebar.h
src/themes/: dark.qss  light.qss
src/translations/: piccomparetool_zh_CN.ts
